--- a/files/styles/about.css
+++ b/files/styles/about.css
@@ -127,7 +127,7 @@ header {
 /* Top Imgage Section */
 
 .banner-container {
-    background: url("../images/earth.png") center center;
+    background: url("../images/3rd\ team\ of\ SOES.jpg") center center;
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 10px;
@@ -782,8 +782,8 @@ section {
     max-width: 50%;
     display: block;
     margin: 0 auto 0.5rem;
-    border: 1px solid #d3d3d3;
-    border-radius: 100rem;
+    border: 1px solid #ffffff;
+    border-radius: 1cm;
 }
 
 @media screen and (min-width: 700px) {
@@ -825,8 +825,8 @@ section {
 }
 
 .column img {
-    width: 45px;
-    height: 50px;
+    width: 90px;
+    height: 90px;
 }
 
 /* .row {
