--- a/files/styles/index.css
+++ b/files/styles/index.css
@@ -23,7 +23,7 @@ body {
     justify-content: space-between;
     align-items: center;
     /* background-color: #CE4A4A; */
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     color: black;
 }
 
@@ -176,7 +176,7 @@ html {
 }
 
 .welcome-button-join {
-    color: white;
+    color: rgb(255, 255, 255);
     width: 250px;
     font-weight: 500;
     background-color: #CE4A4A;
@@ -236,7 +236,7 @@ html {
 .about-flex-container {
     padding-left: 5%; 
     padding-right: 5%; 
-    background-color: rgba(98, 158, 70, 0.15);
+    background-color: rgba(92, 176, 228, 0.613);
     align-items: center;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -331,7 +331,7 @@ html {
 .events-flex-container {
     padding-left: 5%; 
     padding-right: 5%; 
-    background-color: rgb(30,128,240, .15);
+    background-color: rgba(93, 152, 218, 0.527);
     align-items: center;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -423,7 +423,7 @@ html {
 .resources-flex-container {
     padding-left: 5%; 
     padding-right: 5%; 
-    background-color: rgb(238,43,42, .15);
+    background-color: rgba(67, 174, 188, 0.335);
     align-items: center;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -516,7 +516,7 @@ html {
 .collaborate-flex-container {
     padding-left: 5%; 
     padding-right: 5%; 
-    background-color: rgb(99,148,76, .15);
+    background-color: rgba(23, 135, 173, 0.492);
     align-items: center;
     padding-top: 5%;
     padding-bottom: 5%;
