--- a/styles/about.css
+++ b/styles/about.css
@@ -127,7 +127,7 @@ header {
 /* Top Imgage Section */
 
 .banner-container {
-    background: url("../images/3rd\ team\ of\ SOES.jpg") center center;
+    background: url("../images/plantation_team.jpg") center center;
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 10px;
