--- a/styles/index.css
+++ b/styles/index.css
@@ -129,16 +129,6 @@ html {
     box-shadow: 0 2px 2px #333;
 }
 
-/* body { */
-/* background-color: red; */
-    /* color: #ffffff; */
-/* font-family: Arial, Helvetica, sans-serif; */
-/* } */
-
-/* section, aside {
-    padding: 20px;
-    border-radius: 12px;
-} */
 
 /* welcome description */
 .welcome-section-title {
@@ -286,6 +276,22 @@ html {
     padding-left: 5%;
     border: 0;
     /* line-height: 50px; */
+  }
+
+  h3 {
+    display: block;
+    font-size: 1rem;
+    margin-top: 2.33em;
+    margin-bottom: 2.33em;
+    margin-left: 0;
+    margin-right: 0;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-radius:2mm;
+    border-bottom-color: black;
+    text-shadow: black;
+    scrollbar-shadow-color: yellow;
   }
 
   /* about button styling */
