--- a/styles/style_for_about.css
+++ b/styles/style_for_about.css
@@ -4,13 +4,13 @@
 }
 body
 {
-	background:black;
+	background:rgb(63, 62, 62);
 }
  #imgbox img
 {
 	width: 15vw;
 	height: 13vh;
-	/*background-color: red;*/
+	/* background-color: red; */
 }
 
 #firsthead a
@@ -60,7 +60,10 @@ section img
 }
 section .heading
 {
-	color:rgb(246, 0, 201);
+	color:rgb(128, 173, 16);
+	font-family: cursive;
+	border-color: black;
+	font-weight: 300;
 }
 section p 
 {
@@ -72,10 +75,12 @@ section p
 {
 	padding: 20px;
 	margin: 20px;
-	font-size: 1.1rem;
-	background-color: orange;	
+	font-size: 2rem;
+	color:rgb(128, 173, 16);
+	font-family: cursive;
+	font-weight: 300;
 	border:none;
-	border-radius: 5px;
+	border-radius: 6px;
 }
 
 #third div
@@ -85,7 +90,7 @@ section p
 	position: relative;
 	top:15vh;
 	margin: 50px;
-	color: #fff;	
+	color: rgb(23, 152, 14);	
 	/*border:2px solid yellow;*/
 }
 #third div h3
@@ -107,7 +112,7 @@ section p
 	width: 100%;
 	height: 70vh;
 	position: absolute;
-	background-image: url(images/wallpaperflare.com_wallpaper.jpg);
+	background-image: url(#);
 	z-index: -1;
 	opacity: .3;
 	/*background-size: 100% 100%;*/
