--- a/styles/index.css
+++ b/styles/index.css
@@ -336,12 +336,12 @@ html {
 /* events section */
 
 .events-flex-container {
-    padding-left: 5%; 
-    padding-right: 5%; 
+    padding-left: 0%; 
+    padding-right: 0%; 
     background-color: rgba(93, 152, 218, 0.527);
     align-items: center;
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 0%;
+    padding-bottom: 0%;
 }
   
 @media (min-width: 56.25em){
@@ -613,8 +613,9 @@ html {
 .column {
     float: left;
     width: 33.33%;
-    padding: 25px 0;
+    padding: 10px 0;
     padding-top: 50px;
+
     /* background-color: red; */
 }
 
@@ -650,8 +651,8 @@ html {
 }
 
 .footer-class {
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 0%;
+    padding-right: 0%;
     /* height: 10px; */
 }
 
@@ -695,11 +696,13 @@ html {
 /* end of footer */
 
 .container {
-  background-color: black;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-top: 2%;
-  padding-bottom: 2%;
+  background-color:rgb(156, 158, 165);
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  padding-left: 0%;
+  padding-right: 0%;
+  padding-top: 0%;
+  padding-bottom: 0%;
   display: flex;
   justify-content: center;
   align-items: center;
