--- a/styles/style_for_about.css
+++ b/styles/style_for_about.css
@@ -1,6 +1,7 @@
 *{
 	margin: 0;
 	padding: 0;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body
 {
@@ -17,7 +18,7 @@ body
 {
 	color: #fff;
 	text-decoration: none;
-	font-size: 1.2rem;
+	font-size: 1rem;
 	padding: 10px;
 	margin: 10px;
 }
