init commit for footer

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,7 @@
 .body1{
   padding:0.5rem;
   margin: 0.5rem;
+  background: linear-gradient(to right,#fdfdfe,#7bbdde);
 }
 
 .brand-title p {
@@ -79,7 +80,7 @@ body {
 .toggle-button .bar {
     height: 3px;
     width: 100%;
-    background-color: black;
+    background-color: rgb(229, 38, 38);
     border-radius: 10px;
 }
 
@@ -158,6 +159,14 @@ html {
     }
 }
   
+
+#carouselExampleIndicators{
+  font-family:'Times New Roman', Times, serif;
+  background:linear-gradient(90deg,rgb(55, 160, 170),rgb(18, 99, 18));
+  font-size: 40px;
+  text-transform: uppercase;
+  -webkit-animation-clip:text;
+}
 .welcome-main-content {
     flex: 1;  
     padding: 20px;
@@ -706,7 +715,7 @@ html {
 /* end of footer */
 
 .container {
-  background-color:rgb(156, 158, 165);
+  background-color:#638a8dcf;
   text-decoration: none;
   color: rgb(0, 0, 0);
   padding-left: 0%;
@@ -722,7 +731,7 @@ html {
 .column-left{ 
   float: left; 
   /* width: 33.333%;  */
-  width: 20%;
+  width: 50%;
   /* background-color: red; */
   /* display: block; */
 
@@ -763,4 +772,76 @@ html {
   .middleP2 {
     font-size: 7px;
   }
+}
+   
+
+/* footer */
+.site-footer{
+  padding: 0.5em 0;
+  background: #32879eac;
+  font-size: 14px;
+  color:#6b828d;
+  
+}
+
+.site-footer p:last-child{
+  margin-bottom: 0;
+
+}
+
+.site-foter a{
+  line-height: 0;
+  border-radius: 70%;
+  margin: 0 5px 5px 0;
+  border: 1px solid rgb(128, 174, 255);
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  display: inline-block;
+}
+
+.site-foter a:hover{
+  background: rgb(99, 194, 194);
+  border-color: rgb(16, 255, 136);
+  color: black;
+}
+
+
+.site-footer h2{
+  font-size: 22px;
+  margin-bottom: 28px;
+  letter-spacing: .05em;
+  color: #fdfdfe;
+}
+
+ .site-footer .footer-link li{
+  line-height: 1.5;
+  margin-bottom: 15px;
+ }
+
+ .footer-social a{
+  line-height: 0;
+  border-radius: 70%;
+  margin: 0 5px 5px 0;
+  border: 1px solid rgb(57, 74, 104);
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  display: inline-block; 
+}
+
+.footer-social a:hover{
+  background: rgb(99, 194, 194);
+  border-color: rgb(16, 255, 136);
+  color: black;
+}
+
+.footer-social .fa{
+  margin-top: 7px;
 }
