--- a/notes/css/style.css
+++ b/notes/css/style.css
@@ -359,3 +359,73 @@ footer{
     }
 
 }
+
+
+/* footer */
+.site-footer{
+    padding: 0.5em 0;
+    background: #007893;
+    font-size: 14px;
+    color:#000000;
+    
+  }
+  
+  .site-footer p:last-child{
+    margin-bottom: 0;
+  
+  }
+  
+  .site-foter a{
+    line-height: 0;
+    border-radius: 70%;
+    margin: 0 5px 5px 0;
+    border: 1px solid rgb(128, 174, 255);
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    display: inline-block;
+  }
+  
+  .site-foter a:hover{
+    background: rgb(99, 194, 194);
+    border-color: rgb(16, 255, 136);
+    color: black;
+  }
+  
+  
+  .site-footer h2{
+    font-size: 22px;
+    font-family: cursive;
+    margin-bottom: 28px;
+    letter-spacing: .05em;
+    color: #000000;
+  }
+  
+   .site-footer .footer-link li{
+    line-height: 1.5;
+    margin-bottom: 15px;
+   }
+  
+   .footer-social a{
+    line-height: 0;
+    color: aquamarine;
+    border-radius: 70%;
+    margin: 0 5px 5px 0;
+    border: 1px solid rgb(7, 9, 13);
+    width: 30px;
+    height: 30px;
+    display: inline-block; 
+  }
+  
+  .footer-social a:hover{
+    background: rgb(130, 159, 0);
+    border-color: rgb(129, 119, 157);
+    color: rgb(255, 250, 250);
+  }
+  
+  .footer-social .fa{
+    margin-top: 7px;
+  }
