--- a/styles/index.css
+++ b/styles/index.css
@@ -5,19 +5,19 @@
 .body1{
   padding:0.5rem;
   margin: 0.5rem;
-  background: linear-gradient(to right,#fdfdfe,#7bbdde);
+  background: linear-gradient(to right,#bdadca,#82b0c7 ,rgb(129, 166, 197));
 }
 
 .brand-title p {
-    font-size: 12px;
-    color: black;
+    font-size: 22px;
+    color: rgb(255, 0, 0);
 }
 
 .bar {
     padding-right: 5%;
 }
  .image{
-  height: 1000;
+  height: 700;
   width:500px;
   align-items: center;
   align-content: center;
@@ -144,13 +144,18 @@ html {
 /* welcome description */
 .welcome-section-title {
     font-size: 40px;
-    font-weight: 600;
-
+    font-weight: 900;
+    text-shadow: 4px 5px 4px black;
+    border: 3px solid rgba(0, 0, 0, 0.562);
+    box-shadow: 7px 8px 1px 3px rgb(35, 87, 100);
 }
 
 .welcome-flex-container {
     padding-left: 5%; 
     padding-right: 5%;
+    border: 3px solid rgba(44, 170, 228, 0.377);
+    border-radius: 90px 5px 5px 5px;
+    padding-bottom: 10px;
 }
   
 @media (min-width: 56.25em){
@@ -244,12 +249,17 @@ html {
 /* about section */
 
 .about-flex-container {
-    padding-left: 5%; 
-    padding-right: 5%; 
+    margin: 20px 5px 10px 5px ;
+    border: 3px solid rgba(5, 168, 233, 0.459);
+    border-radius: 90px 5px 5px 5px;
+    padding-bottom: 10px;
+    padding-left: 0%; 
+    padding-right: 0%; 
     background-color: rgba(92, 176, 228, 0.613);
     align-items: center;
     padding-top: 5%;
     padding-bottom: 5%;
+    /* text-shadow: 4px 4px 2px rgba(9, 53, 78, 0.582); */
 }
   
 @media (min-width: 56.25em){
@@ -267,6 +277,7 @@ html {
   }
 
   .about-section-title {
+    text-shadow: 4px 5px 3px black;
     font-size: 40px;
     font-weight: 600; 
     text-align: center;
@@ -355,9 +366,11 @@ html {
 /* events section */
 
 .events-flex-container {
+  border: 2px solid black;
+  border-radius: 50px 5px 10px 5px;
     padding-left: 0%; 
     padding-right: 0%; 
-    background-color: rgba(0, 167, 147, 0.97);
+    background-color: rgba(40, 125, 146, 0.97);
     align-items: center;
     padding-top: 0%;
     padding-bottom: 0%;
@@ -661,11 +674,6 @@ html {
 }
 
 #footer {
-    /* position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;  
-    margin-top: -50px; */
     flex-shrink: 0;
 }
 
@@ -711,6 +719,12 @@ html {
     .fas {
         font-size: 5.8px;
     }
+}
+
+.foot{
+  border: 2px solid black;
+  padding: 5px 10px 5px 10px;
+  box-shadow: 6px 5px 5px 4px rgba(20, 49, 56, 0.774);
 }
 /* end of footer */
 
