--- a/styles/index.css
+++ b/styles/index.css
@@ -4,8 +4,7 @@
 }
 .body1{
   padding:0.5rem;
-  margin: 0.5rem;
-  background: linear-gradient(to right,#bdadca,#82b0c7 ,rgb(129, 166, 197));
+  margin: 0.5rem(rgb(52, 88, 120));
 }
 
 .brand-title p {
@@ -30,11 +29,13 @@ body {
 }
 
 .navbar {
+  /* border: solid 5px rgb(45, 43, 95); */
+  /* border-radius: 70px 70px 0px 0px ; */
     display: flex;
     justify-content: space-between;
     align-items: center;
     /* background-color: #CE4A4A; */
-    background-color: rgb(255, 255, 255);
+    background-color:  rgba(154, 154, 154, 0.644);
     color: black;
 }
 
@@ -146,14 +147,15 @@ html {
     font-size: 40px;
     font-weight: 900;
     text-shadow: 4px 5px 4px black;
-    border: 3px solid rgba(0, 0, 0, 0.562);
-    box-shadow: 7px 8px 1px 3px rgb(35, 87, 100);
+    /* text-decoration: underline; */
+    /* border: 3px solid rgba(0, 0, 0, 0.562); */
+    /* box-shadow: 7px 8px 1px 3px rgb(35, 87, 100); */
 }
 
 .welcome-flex-container {
     padding-left: 5%; 
     padding-right: 5%;
-    border: 3px solid rgba(44, 170, 228, 0.377);
+    /* border: 3px solid rgba(247, 29, 0, 0.377); */
     border-radius: 90px 5px 5px 5px;
     padding-bottom: 10px;
 }
@@ -167,7 +169,7 @@ html {
 
 #carouselExampleIndicators{
   font-family:'Times New Roman', Times, serif;
-  background:linear-gradient(90deg,rgb(55, 160, 170),rgb(18, 99, 18));
+  background:linear-gradient(90deg,rgb(24, 52, 78),rgb(37, 54, 102));
   font-size: 40px;
   text-transform: uppercase;
   -webkit-animation-clip:text;
@@ -188,13 +190,14 @@ html {
     display: flex;
     flex-wrap: wrap;
 }
-
+/* welcome button ko lage css */
 .welcome-button-join {
-    color: rgb(255, 255, 255);
-    width: 250px;
-    font-weight: 500;
-    background-color: #CE4A4A;
-    border-radius: 50px;
+  width: 250px;
+  font-weight: 500;
+  border: 1px solid black;
+  color:#2b00ff;
+    background-color: #80ff80;
+    border-radius: 20px;
     font-size: 1.75rem;
     text-align: center;
     text-decoration: none;
@@ -203,12 +206,12 @@ html {
 }
 
 .welcome-button-about {
-    box-shadow: inset 0 0 0 2px #CE4A4A;
-    color: #CE4A4A;
-    width: 250px;
-    border-radius: 50px;
+  border: 1px solid black;
+    color:#2b00ff;
+    background-color: #80ff80;
+    border-radius: 20px;
     background-color: transparent;
-    background-color: initial;
+    background-color: rgba(154, 154, 154, 0.644);
     font-size: 1.75rem;
     text-decoration: none;
     text-align: center;
@@ -250,12 +253,13 @@ html {
 
 .about-flex-container {
     margin: 20px 5px 10px 5px ;
-    border: 3px solid rgba(5, 168, 233, 0.459);
-    border-radius: 90px 5px 5px 5px;
+    /* border: 3px solid rgba(5, 168, 233, 0.459); */
+    /* border-radius: 90px 5px 5px 5px; */
     padding-bottom: 10px;
     padding-left: 0%; 
     padding-right: 0%; 
-    background-color: rgba(92, 176, 228, 0.613);
+    background-color: rgba(154, 154, 154, 0.644);
+    /* background-color: rgba(92, 176, 228, 0.613); */
     align-items: center;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -277,7 +281,8 @@ html {
   }
 
   .about-section-title {
-    text-shadow: 4px 5px 3px black;
+    text-shadow: 3px 3px 2px rgb(130, 88, 88);
+    /* text-decoration: underline; */
     font-size: 40px;
     font-weight: 600; 
     text-align: center;
@@ -295,8 +300,10 @@ html {
     color:white;
     width: 250px;
     font-weight: 500;
-    background-color: #9a0a0a;
-    border-radius: 50px;
+    border: 1px solid black;
+    color:#2b00ff;
+      background-color: #80ff80;
+      border-radius: 20px;
     font-size: 1.75rem;
     text-align: center;
     text-decoration: none;
@@ -304,7 +311,6 @@ html {
     padding-bottom: .7%;
     padding-right: 5%;
     padding-left: 5%;
-    border: 0;
     /* line-height: 50px; */
   }
 
@@ -319,7 +325,7 @@ html {
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-radius:2mm;
-    border-bottom-color: black;
+    /* border-bottom-color: black; */
     text-shadow: black;
     scrollbar-shadow-color: yellow;
   }
@@ -358,7 +364,7 @@ html {
     width: 70%; 
     height: 80%;
     border-radius: 10px;
-    box-shadow:  0px 0px 5px black;
+    /* box-shadow:  0px 0px 5px black; */
   }
 
 /* end of welcome section */
@@ -366,11 +372,11 @@ html {
 /* events section */
 
 .events-flex-container {
-  border: 2px solid black;
-  border-radius: 50px 5px 10px 5px;
+  /* border: 2px solid black; */
+  /* border-radius: 50px 5px 10px 5px; */
     padding-left: 0%; 
     padding-right: 0%; 
-    background-color: rgba(40, 125, 146, 0.97);
+    background-color: rgba(154, 154, 154, 0.644);
     align-items: center;
     padding-top: 0%;
     padding-bottom: 0%;
@@ -403,11 +409,12 @@ html {
   }
 
   .events-button {
-    color:white;
     width: 270px;
     font-weight: 500;
-    background-color: #a70000;
-    border-radius: 50px;
+    border: 1px solid black;
+    color:#2b00ff;
+      background-color: #80ff80;
+      border-radius: 20px;
     font-size: 1.75rem;
     text-align: center;
     text-decoration: none;
@@ -415,7 +422,7 @@ html {
     padding-bottom: .7%;
     padding-right: 5%;
     padding-left: 5%;
-    border: 0;
+    /* border: 0; */
     /* line-height: 50px; */
   }
 
@@ -495,11 +502,12 @@ html {
   }
 
   .resources-button {
-    color:white;
     width: 250px;
     font-weight: 500;
-    background-color: #af0000;
-    border-radius: 50px;
+    border: 1px solid black;
+    color:#2b00ff;
+      background-color: #80ff80;
+      border-radius: 20px;
     font-size: 1.75rem;
     text-align: center;
     text-decoration: none;
@@ -507,7 +515,6 @@ html {
     padding-bottom: .7%;
     padding-right: 5%;
     padding-left: 5%;
-    border: 0;
   }
 
   /* resources button styling */
@@ -555,7 +562,7 @@ html {
 .collaborate-flex-container {
     padding-left: 5%; 
     padding-right: 5%; 
-    background-color: rgba(23, 135, 173, 0.492);
+    background-color: rgba(154, 154, 154, 0.644);
     align-items: center;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -588,11 +595,12 @@ html {
   }
 
   .collaborate-button {
-    color:white;
     width: 250px;
     font-weight: 500;
-    background-color: #940d0d;
-    border-radius: 50px;
+    border: 1px solid black;
+    color:#2b00ff;
+      background-color: #80ff80;
+      border-radius: 20px;
     font-size: 1.75rem;
     text-align: center;
     text-decoration: none;
@@ -600,7 +608,6 @@ html {
     padding-bottom: .7%;
     padding-right: 5%;
     padding-left: 5%;
-    border: 0;
   }
 
   /* collaborate button styling */
@@ -636,7 +643,7 @@ html {
     width: 70%; 
     height: 80%;
     border-radius: 10px;
-    box-shadow:  0px 0px 5px black;
+    /* box-shadow:  0px 0px 5px black; */
   }
 
 /* end of collaborate section */
@@ -722,7 +729,7 @@ html {
 }
 
 .foot{
-  border: 2px solid black;
+  /* border: 2px solid black; */
   padding: 5px 10px 5px 10px;
   box-shadow: 6px 5px 5px 4px rgba(20, 49, 56, 0.774);
 }
@@ -731,7 +738,7 @@ html {
 .container {
   background-color:#638a8dcf;
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: rgb(8, 4, 4);
   padding-left: 0%;
   padding-right: 0%;
   padding-top: 0%;
@@ -792,8 +799,8 @@ html {
 /* footer */
 .site-footer{
   padding: 0.5em 0;
-  background: #32879eac;
   font-size: 14px;
+  background: rgba(154, 154, 154, 0.644);
   color:#6b828d;
   
 }
@@ -828,9 +835,11 @@ html {
   font-size: 22px;
   margin-bottom: 28px;
   letter-spacing: .05em;
-  color: #fdfdfe;
+  border: 1px solid black;
+    color:#2b00ff;
+    background-color: #80ff80;
+    border-radius: 20px 30px 20px 30px;
 }
-
  .site-footer .footer-link li{
   line-height: 1.5;
   margin-bottom: 15px;
@@ -851,9 +860,9 @@ html {
 }
 
 .footer-social a:hover{
-  background: rgb(99, 194, 194);
-  border-color: rgb(16, 255, 136);
-  color: black;
+  border: 1px solid black;
+    color:#2b00ff;
+    background-color: #e5e5e5;
 }
 
 .footer-social .fa{
