commit for rotational function

--- a/styles/index.css
+++ b/styles/index.css
@@ -221,7 +221,7 @@ html {
 
 .sidebar {
     flex: .75 0 300px;
-    padding: 20px;
+    padding: 0px;
     border-radius: 12px;
 }
 
@@ -230,11 +230,10 @@ html {
     margin-left: auto;
     margin-right: auto;
     margin-top: 3cm;
-    width: 70%; 
-    height: 80%;
-    width: 350px; 
+    width: 90%; 
+    height: 90%;
     /* height: 300px; */
-    /* animation: rotation 13s infinite linear; */
+    animation: rotation 13s infinite linear;
     
 }
 
