--- a/css/index.css
+++ b/css/index.css
@@ -322,7 +322,7 @@ html {
     width: 70%; 
     height: 80%;
     border-radius: 10px;
-    box-shadow:  0px 0px 5px black;
+    /* box-shadow:  0px 0px 5px black; */
   }
 
 /* end of welcome section */
@@ -405,6 +405,8 @@ html {
     flex: .75 0 300px;
     padding: 20px;
     border-radius: 12px;
+    width: 100%;
+    height: 100%;
   }
 
   .events-img {
@@ -414,7 +416,7 @@ html {
     width: 70%; 
     height: 80%;
     border-radius: 10px;
-    box-shadow:  0px 0px 5px black;
+    /* box-shadow:  0px 0px 5px black; */
   }
 
 /* end of events section */
@@ -428,6 +430,8 @@ html {
     align-items: center;
     padding-top: 5%;
     padding-bottom: 5%;
+    height: 80%;
+    width: 80%;
 }
   
 @media (min-width: 56.25em){
@@ -469,7 +473,7 @@ html {
     padding-bottom: .7%;
     padding-right: 5%;
     padding-left: 5%;
-    border: 0;
+    /* border: 0; */
   }
 
   /* resources button styling */
@@ -495,7 +499,7 @@ html {
   .resources-img-section {
     flex: .75 0 300px;
     padding: 20px;
-    border-radius: 12px;
+    /* border-radius: 12px; */
   }
 
   .resources-img {
@@ -504,8 +508,8 @@ html {
     margin-right: auto;
     width: 70%; 
     height: 80%;
-    border-radius: 10px;
-    box-shadow:  0px 0px 5px black;
+    /* border-radius: 10px; */
+    /* box-shadow:  0px 0px 5px black; */
   }
 
 
@@ -587,8 +591,9 @@ html {
   
   .collaborate-img-section {
     flex: .75 0 300px;
-    padding: 20px;
-    border-radius: 12px;
+    height: 100%;
+    width: 100%; 
+    /* height: 300px; */
   }
 
   .collaborate-img {
@@ -597,8 +602,7 @@ html {
     margin-right: auto;
     width: 70%; 
     height: 80%;
-    border-radius: 10px;
-    box-shadow:  0px 0px 5px black;
+    /* border-radius: 12px solid black; */
   }
 
 /* end of collaborate section */
